--- a/src/components/SocialButton/styles.module.scss
+++ b/src/components/SocialButton/styles.module.scss
@@ -1,6 +1,7 @@
 .socialButton {
   height: 50px;
   width: 100%;
+  padding: 1rem 0;
 
   background: 0;
   border: 1.5px solid var(--pink);
@@ -12,4 +13,10 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+
+  transition: 0.2s;
+
+  &:hover {
+    background: var(--pink);
+  }
 }
