sign out button

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -17,8 +17,14 @@
 
   background: var(--light-dark);
 
-  h1 {
-    color: var(--pink);
+  .userInfoHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    h1 {
+      color: var(--pink);
+    }
   }
 
   .userInfo {
