--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -5,6 +5,7 @@
   padding: 0 2rem;
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -42,6 +43,26 @@
         color: var(--pink);
       }
     }
+  }
+
+  @media (min-width: 1025px) {
+    width: 480px;
+  }
+}
+
+.metricsButton {
+  width: 100%;
+  height: 50px;
+  border: 0;
+  border-radius: 8px;
+  margin-top: 2rem;
+
+  background: var(--pink);
+
+  transition: filter 0.2s;
+
+  &:hover {
+    filter: brightness(0.8);
   }
 
   @media (min-width: 1025px) {
