--- a/src/pages/auth.module.scss
+++ b/src/pages/auth.module.scss
@@ -29,6 +29,8 @@
     flex-direction: row;
 
     .formContainer {
+      max-width: 560px;
+
       form {
         margin-top: 0;
       }
@@ -51,27 +53,4 @@
   &:hover {
     filter: brightness(0.8);
   }
-}
-
-.divider {
-  height: 2px;
-  width: 100%;
-  background: var(--light-dark);
-  margin: 2rem 0;
-
-  @media (min-width: 1025px) {
-    margin: 0 4rem;
-    height: 240px;
-    width: 2px;
-  }
-}
-
-.socialButtonsContainer {
-  width: 100%;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
 }
